# taxi-fastapi-vendee

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  app.json  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py  test_main.http  test_performance.py  test_render.http
.claude/: settings.local.json
calculators/: cpam_calculator.py  taxi_calculator.py
models/: cpam.py  taxi.py
routes/: cpam.py  health.py  images.py  taxi.py
